@@ -37,6 +37,7 @@ $Source$
       bug #1436279 Left frame links open in new windows in Safari
     * libraries/footer.inc.php, themes/*/img/window-new.png *NEW*:
       added icon for new window
+    * libraries/dbi/mysqli.dbi.lib.php: workaround for http://bugs.php.net/36007
 
 2006-02-21 Michal Čihař  <michal@cihar.com>
     * scripts/setup.php:
